; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/coap/extr_uri.c_write_option.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/coap/extr_uri.c_write_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pkt_scr = type { i32, %struct.TYPE_8__*, %struct.TYPE_7__* }
%struct.TYPE_8__ = type { i64, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }
%struct.TYPE_7__ = type { i64, i32 }

@.str = private unnamed_addr constant [3 x i8] c"..\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"not a valid segment\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"buffer too small for option\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_option(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.pkt_scr*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.pkt_scr*
  store %struct.pkt_scr* %10, %struct.pkt_scr** %7, align 8
  %11 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %12 = call i32 @assert(%struct.pkt_scr* %11)
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @min(i64 %14, i32 2)
  %16 = call i64 @memcmp(i8* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  br label %107

19:                                               ; preds = %3
  %20 = load i8*, i8** %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i32 @check_segment(i8* %20, i64 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %19
  %26 = call i32 @NODE_DBG(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %107

27:                                               ; preds = %19
  %28 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %29 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %28, i32 0, i32 2
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i32, i32* %8, align 4
  %34 = sext i32 %33 to i64
  %35 = icmp ult i64 %32, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %27
  %37 = call i32 @NODE_DBG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0))
  br label %107

38:                                               ; preds = %27
  %39 = load i8*, i8** %4, align 8
  %40 = load i64, i64* %5, align 8
  %41 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %42 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %41, i32 0, i32 2
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 8
  %46 = call i32 @decode_segment(i8* %39, i64 %40, i32 %45)
  %47 = load i32, i32* %8, align 4
  %48 = icmp sgt i32 %47, 0
  br i1 %48, label %49, label %107

49:                                               ; preds = %38
  %50 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %51 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %50, i32 0, i32 2
  %52 = load %struct.TYPE_7__*, %struct.TYPE_7__** %51, align 8
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 8
  %55 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %56 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %55, i32 0, i32 1
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %57, i32 0, i32 1
  %59 = load %struct.TYPE_6__*, %struct.TYPE_6__** %58, align 8
  %60 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %61 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %60, i32 0, i32 1
  %62 = load %struct.TYPE_8__*, %struct.TYPE_8__** %61, align 8
  %63 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %59, i64 %64
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 0
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %66, i32 0, i32 0
  store i32 %54, i32* %67, align 4
  %68 = load i32, i32* %8, align 4
  %69 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %70 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %69, i32 0, i32 1
  %71 = load %struct.TYPE_8__*, %struct.TYPE_8__** %70, align 8
  %72 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %71, i32 0, i32 1
  %73 = load %struct.TYPE_6__*, %struct.TYPE_6__** %72, align 8
  %74 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %75 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %74, i32 0, i32 1
  %76 = load %struct.TYPE_8__*, %struct.TYPE_8__** %75, align 8
  %77 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %76, i32 0, i32 0
  %78 = load i64, i64* %77, align 8
  %79 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %73, i64 %78
  %80 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %79, i32 0, i32 0
  %81 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %80, i32 0, i32 1
  store i32 %68, i32* %81, align 4
  %82 = load i32, i32* %8, align 4
  %83 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %84 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %83, i32 0, i32 2
  %85 = load %struct.TYPE_7__*, %struct.TYPE_7__** %84, align 8
  %86 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %85, i32 0, i32 1
  %87 = load i32, i32* %86, align 8
  %88 = add nsw i32 %87, %82
  store i32 %88, i32* %86, align 8
  %89 = load i32, i32* %8, align 4
  %90 = sext i32 %89 to i64
  %91 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %92 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %91, i32 0, i32 2
  %93 = load %struct.TYPE_7__*, %struct.TYPE_7__** %92, align 8
  %94 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %93, i32 0, i32 0
  %95 = load i64, i64* %94, align 8
  %96 = sub i64 %95, %90
  store i64 %96, i64* %94, align 8
  %97 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %98 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %97, i32 0, i32 1
  %99 = load %struct.TYPE_8__*, %struct.TYPE_8__** %98, align 8
  %100 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %99, i32 0, i32 0
  %101 = load i64, i64* %100, align 8
  %102 = add i64 %101, 1
  store i64 %102, i64* %100, align 8
  %103 = load %struct.pkt_scr*, %struct.pkt_scr** %7, align 8
  %104 = getelementptr inbounds %struct.pkt_scr, %struct.pkt_scr* %103, i32 0, i32 0
  %105 = load i32, i32* %104, align 8
  %106 = add nsw i32 %105, 1
  store i32 %106, i32* %104, align 8
  br label %107

107:                                              ; preds = %18, %25, %36, %49, %38
  ret void
}

declare dso_local i32 @assert(%struct.pkt_scr*) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #1

declare dso_local i32 @min(i64, i32) #1

declare dso_local i32 @check_segment(i8*, i64) #1

declare dso_local i32 @NODE_DBG(i8*) #1

declare dso_local i32 @decode_segment(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
